; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/hw/hns/extr_hns_roce_restrack.c_hns_roce_fill_res_entry.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/hw/hns/extr_hns_roce_restrack.c_hns_roce_fill_res_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32 }
%struct.rdma_restrack_entry = type { i64 }

@RDMA_RESTRACK_CQ = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hns_roce_fill_res_entry(%struct.sk_buff* %0, %struct.rdma_restrack_entry* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.sk_buff*, align 8
  %5 = alloca %struct.rdma_restrack_entry*, align 8
  store %struct.sk_buff* %0, %struct.sk_buff** %4, align 8
  store %struct.rdma_restrack_entry* %1, %struct.rdma_restrack_entry** %5, align 8
  %6 = load %struct.rdma_restrack_entry*, %struct.rdma_restrack_entry** %5, align 8
  %7 = getelementptr inbounds %struct.rdma_restrack_entry, %struct.rdma_restrack_entry* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @RDMA_RESTRACK_CQ, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %15

11:                                               ; preds = %2
  %12 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %13 = load %struct.rdma_restrack_entry*, %struct.rdma_restrack_entry** %5, align 8
  %14 = call i32 @hns_roce_fill_res_cq_entry(%struct.sk_buff* %12, %struct.rdma_restrack_entry* %13)
  store i32 %14, i32* %3, align 4
  br label %16

15:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %16

16:                                               ; preds = %15, %11
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}

declare dso_local i32 @hns_roce_fill_res_cq_entry(%struct.sk_buff*, %struct.rdma_restrack_entry*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
